2006-07-06  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl: catch scrollbar use of highlightthickness

2006-06-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/bgerror.tcl (::tk::dialog::error::bgerror): remove a
	couple of unnecessary hardcoded options

2006-06-15  Don Porter  <dgp@users.sourceforge.net>

	* changes: changes to start prep for an 8.4.14 release.

2006-06-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc:  Sync with tcl to enable building with 
	* win/rules.vc:     VC8 (VS2005 C compiler)
	* win/nmakehlp.c:

2006-06-14  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkScale.c:	Revised variable writing logic to account
	for [scale]'s design that it deals with its value as a formatted
	string, and not as a double.	[Bug 891141].

2006-06-14  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXSubwindows.c (TkMacOSXInvalidateWindow): ensure invalid
	clip regions are recreated via TkMacOSXUpdateClipRgn() before they are
	used; correct call order of TkMacOSXInvalidateWindow() and
	TkMacOSXInvalClipRgns() throughout. [Bug 1501922]

	* macosx/tkMacOSXDraw.c (TkPutImage): implement drawing of very wide
	images in slices of less than 4096 pixels to workaround CopyBits
	limitation. [Bug 950121]

2006-06-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkMain.c:     Added Tcl_Preserve() call on the master
	interp as crash protection against any Tcl_DeleteInterp() call
	that might happen.

2006-06-05  Don Porter	<dgp@users.sourceforge.net>

	* generic/tkInt.h:      Thread safety for the data structures of 
	* generic/tkConsole.c:  the wish [console].  [Bug 1188340].

2006-06-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tkConsole.c:	Added Tcl_RegisterChannel() calls to bump
	the refcount of channels passed to Tcl_SetStdChannel().	 This prevents
	early free-ing of the channels that leads to crashes.  [Bug 912571].

2006-05-29  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/entry.test (entry-22.1):